# image_ascii_converter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
convertor/: convertor.cpp  convertor.h
